# ProFieldManager

./: .replit  AUTHENTICATION_FIX_GUIDE.md  COMPLETE_ANDROID_PROJECT_READY.md  COMPRESSION_SYSTEM_LOCK.md  CUSTOM_DOMAIN_LOGIN_TEST.md  CUSTOM_DOMAIN_SOLUTION_IMPLEMENTATION.md  CUSTOM_DOMAIN_TROUBLESHOOTING.md  CUSTOM_DOMAIN_UPLOAD_FINAL_SOLUTION.md  FINAL_CUSTOM_DOMAIN_DIAGNOSIS.md  IMMEDIATE_UPLOAD_FIX.md  OTA_DEPLOYMENT_GUIDE.md  PROJECT_EXPORT_INSTRUCTIONS.md  UPLOAD_FIX_GUIDE.md  UPLOAD_TEST_RESULTS.md  app.json  app_store_audit.md  build-script.sh  check_file_integrity.js  cookies.txt  create-test-user.js  create-tutorial-data.js  custom-domain-diagnostic.html  debug-cloudinary-credentials.js  debug-custom-domain-upload.js  debug-custom-domain.js  debug-project-49-files.js  design_guidelines.md  fix-missing-images.js  force-cache-refresh.js  fresh_cookies.txt  headers.txt  latest_cookies.txt  migrate-missing-files.js  new_cookies.txt  package-lock.json  package.json  replit.md  sync_onestep.ts  task-group-routes.txt  temp_migration.sql  (+25 more)
ProFieldManagerAndroid/: 16KB_PAGE_ALIGNMENT_FIX.md  ANDROID_STUDIO_SETUP.md  PROJECT_EXPORT_COMPLETE.md  README.md  build.gradle  build_apk.sh  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle
ProFieldManagerAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-studio-export/: ANDROID_STUDIO_EXPORT_GUIDE.md  EXPORT_SUMMARY.md  package.json
attached_assets/: Pasted--API-Request-Object-method-POST-originalUrl-api-auth-login-fullUrl-api-auth-login--1757107692639_1757107692639.txt  (+39 more)
(+423 files in other folders)
